added functionality for joining and creating groups, connected user and group tables, and added some new html pages

--- a/website/templates/create_group.html
+++ b/website/templates/create_group.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %}
 <h1 align="center">Create a Group</h1>
-<form method="post" action="http://127.0.0.1:5000/create-group">
+<form method="post" action="http://127.0.0.1:5000/create-group" align="center">
     <label for="group_name">Group name:</label><br>
     <input type="text" id="group_name" name="group_name"><br><br>
     <input type="submit" id="mysubmit">
