--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %}
 <h1 align="center">Welcome to marmo.</h1>
 <a href="create-group"><button type="button">Create New Group</button></a>
+<a href="join-group"><button type="button">Join Group</button></a>
 {% endblock %}
