better better better

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -27,6 +27,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+      <a class="navbar-brand" href="#">Signed in as: {{ user.username }}</a>
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
           {% if user.is_authenticated %}
