--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -27,7 +27,9 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+      {% if user.is_authenticated %}
       <a class="navbar-brand" href="#">Signed in as: {{ user.username }}</a>
+      {% endif %}
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
           {% if user.is_authenticated %}
