--- a/website/templates/create_group.html
+++ b/website/templates/create_group.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %}
-<h1 align="center">Create a Group</h1>
-<form method="post" action="http://127.0.0.1:5000/create-group" align="center">
-    <label for="group_name">Group name:</label><br>
-    <input type="text" id="group_name" name="group_name"><br><br>
-    <input type="submit" id="mysubmit">
-</form>
+<br><h3 align="center">Create a Group</h3>
 
+    <form method="post" action="http://127.0.0.1:5000/create-group" align="center">
+        <label for="group_name">Group name:</label><br>
+        <input type="text" id="group_name" name="group_name"><br><br>
+        <a class="btn btn-secondary" href="/" role="button">Back</a>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form><br>
 {% endblock %}
