--- a/website/templates/join_group.html
+++ b/website/templates/join_group.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %}
-<h1 align="center">Join a Group</h1>
+<br><h3 align="center">Join a Group</h3>
 <form method="post" action="http://127.0.0.1:5000/join-group" align="center">
     <label for="group_id">Group id:</label><br>
     <input type="text" id="group_id" name="group_id"><br><br>
-    <input type="submit" id="mysubmit">
+    <a class="btn btn-secondary" href="/" role="button">Back</a>
+    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 {% endblock %}
