--- a/website/templates/add_payment.html
+++ b/website/templates/add_payment.html
@@ -1,20 +1,17 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %}
-<br><h3 align="center">Add transaction</h3>
+<br><h3 align="center">Add payment</h3>
 
     <form method="post" action="http://127.0.0.1:5000/add-transaction" align="center">
-        
-        <select class="custom-select cusrom-select-lg" >
-            {% for group in user.groups %}
-            <option value="1">{{ group.group_name }}</option>
-            {% endfor %}
-        </select>
-
+        <label for="group_id">Group id:</label><br>
+        <input type="text" id="group_id" name="group_id"><br><br>
         <label for="description">Description:</label><br>
         <input type="text" id="description" name="description"><br><br>
         <label for="amount">Amount:</label><br>
         <input type="number" id="amount" name="amount"><br><br>
         <label for="payer_id">Payer id:</label><br>
         <input type="text" id="payer_id" name="payer_id"><br><br>
+        <label for="recipient_id">Recipient id:</label><br>
+        <input type="text" id="recipient_id" name="recipient_id"><br><br>
         <a class="btn btn-secondary" href="/" role="button">Back</a>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form><br>
