--- a/website/templates/group.html
+++ b/website/templates/group.html
@@ -8,9 +8,18 @@
   {% endfor %}<br>
   <h4>Debts:</h4>
   {% for member in group.members %}
-  <h6>{{ group.calculate_debts(member) }}</h6>
+    {% if group.calculate_debts(member)[1] == 0 %}
+      <h6>{{member.username}} is <span style="color: rgb(0, 197, 0);">all settled up!</span></h6>
+    {% endif %}
+    {% if group.calculate_debts(member)[1] == 1 %}
+      <h6>{{member.username}} is owed <span style="color: rgb(0, 197, 0);">${{ group.calculate_debts(member)[0] }}</span>.</h6>
+    {% endif %}
+    {% if group.calculate_debts(member)[1] == -1 %}
+      <h6>{{member.username}} owes <span style="color: red;">${{ group.calculate_debts(member)[0] }}</span>.</h6>
+    {% endif %}
   {% endfor %}<br>
   <a class="btn btn-secondary" href="/" role="button">Back</a>
   <a class="btn btn-primary" href="/add-transaction" role="button">Add transaction</a>
+  <a class="btn btn-primary" href="/add-payment" role="button">Add payment</a>
 </div>
 {% endblock %}
