--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,48 +1,65 @@
-{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
-    content %}
-    <form method="POST">
-      <h3 align="center">Sign Up</h3>
-      <div class="form-group">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Sign Up</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
+    <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital@0;1&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+</head>
+<header>
+  <a href="/"><img src="Logos/logo3small.png"></a>
+     <div style="margin-right: 5rem; position: sticky;">
+       <a href="login" id="signin">Log In</a>
+    </div>
+</header>
+<body>
+  <div id="wrapper">
+    <main>
+      <h1>Create Account</h1>
+      <p>Required information is marked with an asterisk (*).</p>
+      <form method="post">
         <label for="email">Email Address</label>
         <input
           type="email"
           class="form-control"
           id="email"
           name="email"
-          placeholder="Enter email"
-        />
-      </div>
-      <div class="form-group">
+          placeholder="Enter email">
         <label for="firstName">Username</label>
         <input
           type="text"
           class="form-control"
           id="firstName"
           name="firstName"
-          placeholder="Enter a username"
-        />
-      </div>
-      <div class="form-group">
+          placeholder="Enter a username">
+
         <label for="password1">Password</label>
         <input
           type="password"
           class="form-control"
           id="password1"
           name="password1"
-          placeholder="Enter password"
-        />
-      </div>
-      <div class="form-group">
+          placeholder="Enter password">
+
         <label for="password2">Password (Confirm)</label>
         <input
           type="password"
           class="form-control"
           id="password2"
           name="password2"
-          placeholder="Confirm password"
-        />
-      </div>
-      <br />
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    {% endblock %}
+          placeholder="Confirm password">
+
+          <input type="submit" id="mySubmit" value="Create Account">
+    </main>
+  </div>
+    <footer>
+        Copyright &copy; 2022 Marmo Expense Sharing<br>
+        <a href="mailto:carsondidericksen@gmail.com">support@marmo.app</a>
+    </footer>
+  </div>
+</body>
+</html>
