Just a couple changes

--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,7 +1,48 @@
 {% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
     content %}
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Sign Up</title>
+  <meta charset="utf-8">
+  <meta name="viewport" 
+        content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="noindex, nofollow">
+  <link rel ="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Karla:ital@0;1&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+</head>
+<header>
+  <a href="index.html"><img src="Logos/logo3small.png"></a>
+     <div style="margin-right: 5rem; position: sticky;">
+       <a class="signup" href="signup.html">Sign Up</a> &nbsp;
+       <a href="signin.html" id="signin">Sign In</a>
+    </div>
+ </header>
+<body>
+<div id="wrapper">
+  <main>
+    <h1>Sign In</h1>
+    <form method="post" action="">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+
+        <label for="password">Password:</label>
+        <input type="password" id="passsword" name="password" required>
+        <input type="submit" id="mySubmit" value="Sign In">
+    </form>
+  </main>
+</div>
+  <footer>
+      Copyright &copy; 2022 Marmo Expense Sharing<br>
+      <a href="mailto:carsondidericksen@gmail.com">support@marmo.app</a>
+  </footer>
+</div>
+</body>
+</html>
     <form method="POST">
-      <h3 align="center">Sign Up</h3>
+      <h3>Sign Up</h3>
       <div class="form-group">
         <label for="email">Email Address</label>
         <input
