--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,7 +1,25 @@
+{% with messages = get_flashed_messages(with_categories=true) %} {% if
+  messages %} {% for category, message in messages %} {% if category ==
+  'error' %}
+  <div class="alert alert-danger alter-dismissable fade show" role="alert">
+    {{ message }}
+    <button type="button" class="close" data-dismiss="alert">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  {% else %}
+  <div class="alert alert-success alter-dismissable fade show" role="alert">
+    {{ message }}
+    <button type="button" class="close" data-dismiss="alert">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  {% endif %} {% endfor %} {% endif %} {% endwith %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Login</title>
+<title>Log In</title>
   <meta charset="utf-8">
   <meta name="viewport" 
         content="width=device-width, initial-scale=1.0">
@@ -12,9 +30,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla:ital@0;1&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 </head>
 <header>
-  <a href="/"><img src="Logos/logo3small.png"></a>
+  <a href="/"><img src="{{ url_for('static', filename='logo3small.png') }}"></a>
      <div style="margin-right: 5rem; position: sticky;">
-       <a class="signup" href="sign-up">Sign Up</a> &nbsp;
+       <a class="signup" href="/sign-up">Sign Up</a> &nbsp;
     </div>
  </header>
 <body>
@@ -22,19 +40,18 @@
   <main>
     <h1>Log In</h1>
     <form method="post">
-        <label for="email">Email:</label>
+        <label for="username">Email Address:</label>
         <input type="text" id="email" name="email" required>
 
         <label for="password">Password:</label>
         <input type="password" id="passsword" name="password" required>
-        <input type="submit" id="mySubmit" value="Log In">
+        <input type="submit" id="mySubmit" value="Sign In">
     </form>
   </main>
 </div>
-  <footer>
-      Copyright &copy; 2022 Marmo Expense Sharing<br>
-      <a href="mailto:carsondidericksen@gmail.com">support@marmo.app</a>
-  </footer>
-</div>
+<footer>
+  Copyright &copy; 2022 Marmo Expense Sharing<br>
+  <a href="mailto:carsondidericksen@gmail.com">support@marmo.app</a>
+</footer>
 </body>
 </html>
