--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
-    content %}
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <title>Sign Up</title>
@@ -8,80 +6,42 @@
   <meta name="viewport" 
         content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
-  <link rel ="stylesheet" href="style.css">
+  <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Karla:ital@0;1&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 </head>
 <header>
-  <a href="index.html"><img src="Logos/logo3small.png"></a>
+  <a href="/"><img src="{{ url_for('static', filename='logo3small.png') }}"></a>
      <div style="margin-right: 5rem; position: sticky;">
-       <a class="signup" href="signup.html">Sign Up</a> &nbsp;
-       <a href="signin.html" id="signin">Sign In</a>
+       <a href="/login" id="signin">Log In</a>
     </div>
  </header>
 <body>
 <div id="wrapper">
   <main>
-    <h1>Sign In</h1>
-    <form method="post" action="">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+    <h1>Create Account</h1>
+    <p>Required information is marked with an asterisk (*).</p>
+    <form method="post">
+        <label for="firstname">* First Name:</label>
+        <input type="text" id="firstname" name="firstname" class="form-control" required>
 
-        <label for="password">Password:</label>
-        <input type="password" id="passsword" name="password" required>
-        <input type="submit" id="mySubmit" value="Sign In">
+        <label for="email">* E-mail:</label>
+        <input type="email" id="email" name="email" class="form-control" required>
+
+        <label for="password1">Create Password:</label>
+        <input type="password" id="password1" name="password1" class="form-control" required>
+
+        <label for="password2">Confirm Password:</label>
+        <input type="password" id="password2" name="password2" class="form-control" required>
+
+        <input type="submit" id="mySubmit" value="Create">
     </form>
   </main>
 </div>
-  <footer>
-      Copyright &copy; 2022 Marmo Expense Sharing<br>
-      <a href="mailto:carsondidericksen@gmail.com">support@marmo.app</a>
-  </footer>
-</div>
-</body>
-</html>
-    <form method="POST">
-      <h3>Sign Up</h3>
-      <div class="form-group">
-        <label for="email">Email Address</label>
-        <input
-          type="email"
-          class="form-control"
-          id="email"
-          name="email"
-          placeholder="Enter email">
-        <label for="firstName">Username</label>
-        <input
-          type="text"
-          class="form-control"
-          id="firstName"
-          name="firstName"
-          placeholder="Enter a username">
-
-        <label for="password1">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="password1"
-          name="password1"
-          placeholder="Enter password">
-
-        <label for="password2">Password (Confirm)</label>
-        <input
-          type="password"
-          class="form-control"
-          id="password2"
-          name="password2"
-          placeholder="Confirm password">
-
-          <input type="submit" id="mySubmit" value="Create Account">
-    </main>
-  </div>
-    <footer>
-        Copyright &copy; 2022 Marmo Expense Sharing<br>
-        <a href="mailto:carsondidericksen@gmail.com">support@marmo.app</a>
-    </footer>
-  </div>
+<footer>
+  Copyright &copy; 2022 Marmo Expense Sharing<br>
+  <a href="mailto:carsondidericksen@gmail.com">support@marmo.app</a>
+</footer>
 </body>
 </html>
