moved images into an image folder and fixed an issue where homehero image displayed twice

--- a/website/templates/landing.html
+++ b/website/templates/landing.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla:ital@0;1&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 </head>
 <header>
-  <a href="/"><img src="{{ url_for('static', filename='logo3small.png') }}"></a>
+  <a href="/"><img src="{{ url_for('static', filename='images/logo3small.png') }}"></a>
      <div style="margin-right: 5rem; position: sticky;">
        <a class="signup" href="/sign-up">Sign Up</a> &nbsp;
        <a href="/login" id="signin">Log In</a>
@@ -26,7 +26,7 @@
       <h2>We make expense sharing <strong>stress-free.</strong> Split costs between groups and track spending easier than ever before.<br><br>Best part? It's FREE. No cap.</h2>
     <br><br><a href="/login" class="buttonClass">Sign Up</a>
   </div>
-  <div id="homehero"><img src="{{ url_for('static', filename='phonemockup.png') }}"></div>
+  <div id="homehero"></div>
 </div>
   <div id="wrapper">
     <main>
