--- a/website/static/style.css
+++ b/website/static/style.css
@@ -173,6 +173,14 @@ label{
     
 }
 
+.error{
+    color: red;
+    padding-left: 10px;
+}
+.success{
+    color: green;
+    padding-left: 10px;
+}
 
 @media only screen and (max-width: 1100px){
     
