--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,22 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Sign Up</title>
-  <meta charset="utf-8">
-  <meta name="viewport" 
-        content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="noindex, nofollow">
-  <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Karla:ital@0;1&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
-</head>
-<header>
-  <a href="/"><img src="{{ url_for('static', filename='logo3small.png') }}"></a>
-     <div style="margin-right: 5rem; position: sticky;">
-       <a href="/login" id="signin">Log In</a>
-    </div>
- </header>
+{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block content %}
+
 <body>
 <div id="wrapper">
   <main>
@@ -39,9 +22,5 @@
     </form>
   </main>
 </div>
-<footer>
-  Copyright &copy; 2022 Marmo Expense Sharing<br>
-  <a href="mailto:carsondidericksen@gmail.com">support@marmo.app</a>
-</footer>
 </body>
-</html>
+{% endblock %}
