various bug fixes with account creation, logo not loading, buttons incorrectly linked

--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -30,7 +30,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla:ital@0;1&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 </head>
 <header>
-  <a href="/"><img src="{{ url_for('static', filename='logo3small.png') }}"></a>
+  <a href="/"><img src="{{ url_for('static', filename='images/logo3small.png') }}"></a>
      <div style="margin-right: 5rem; position: sticky;">
        <a class="signup" href="/sign-up">Sign Up</a> &nbsp;
     </div>
