--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla:ital@0;1&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 </head>
 <header>
-  <a href="/"><img src="{{ url_for('static', filename='logo3small.png') }}"></a>
+  <a href="/"><img src="{{ url_for('static', filename='images/logo3small.png') }}"></a>
      <div style="margin-right: 5rem; position: sticky;">
        <a href="/login" id="signin">Log In</a>
     </div>
@@ -29,10 +29,10 @@
         <label for="email">* E-mail:</label>
         <input type="email" id="email" name="email" class="form-control" required>
 
-        <label for="password1">Create Password:</label>
+        <label for="password1">* Create Password:</label>
         <input type="password" id="password1" name="password1" class="form-control" required>
 
-        <label for="password2">Confirm Password:</label>
+        <label for="password2">* Confirm Password:</label>
         <input type="password" id="password2" name="password2" class="form-control" required>
 
         <input type="submit" id="mySubmit" value="Create">
