--- a/website/templates/join_group.html
+++ b/website/templates/join_group.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %}
 <br><h3 align="center">Join a Group</h3>
-<form method="post" action="http://127.0.0.1:5000/join-group" align="center">
+<form method="post" action="/join-group" align="center">
     <label for="group_id">Group id:</label><br>
     <input type="text" id="group_id" name="group_id"><br><br>
     <a class="btn btn-secondary" href="/" role="button">Back</a>
