--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,7 +14,8 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
-
+    <link rel="apple-touch-icon" sizes="180x180" href="">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.png') }}">
     <title>{% block title %}Home{% endblock %}</title>
   </head>
   <body>
