--- a/website/templates/landing.html
+++ b/website/templates/landing.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Karla:ital@0;1&family=Open+Sans:wght@800&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.png') }}">
   </head>
   <header>
     <a href="/"
