--- a/website/static/style.css
+++ b/website/static/style.css
@@ -2,16 +2,50 @@ body{
     background-color: #fff;
     color: #666666;
     background-attachment: fixed;
-    margin: 0px;
 }
 
 * {
     box-sizing: border-box;
     font-family:'Karla';
-    letter-spacing: 1px;
+    margin: 0;
+}
+h1{
+    color: #6CBF49;
+    font-family:'Open Sans';
+    font-weight: 600;
+    font-size: 2.5rem;
+}
+
+h2{
+    color: #000;
+    font-weight: 300;
+}
+
+h3{
+    color: #6CBF49;
+    font-weight: 800;
+    font-size: 2rem;
+    padding-bottom: 1.5rem;
+}
+
+h4{
+    color: #6CBF49;
+}
+
+p{
+    color: #000;
+    font-weight: 500;
+}
+
+#wrapper{
+    background-color: #fafafa;
+    display: grid;
+    grid-auto-rows: minmax(0px, auto);
+    grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 250px)) minmax(0px, 1fr);
 }
 header{
     background-color: #fff;
+    height: 100px;
     color: #fff;
     font-family: georgia, serif;
     grid-row: 1 / 2;
@@ -19,48 +53,58 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0.5rem;
+    padding: 0 2rem;
 }
-#wrapper{
-    background-color: #fafafa;
-    display: grid;
-    grid-auto-rows: minmax(0px, auto);
-    grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 175px)) minmax(0px, 1fr)
+header img{
+    height: 70px;
+    padding-left: 2rem;
 }
-#banner{
+#headerbar{
+    background-color: #fff;
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+}
+
+#links a {
+    color: #000;
+    font-weight: 600;
+    font-size: 1.15rem;
+    text-decoration: none;
+    padding: 0 2rem;
+}
+
+#bannerbar{
     background-color: #d4d4d4;
-    display: grid;
-    grid-auto-rows: minmax(0px, auto);
-    grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 175px)) minmax(0px, 1fr)
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+    height: 40rem;
 }
-#homehero{
-    height: 50rem;
-    background-image: url("images/PhoneMockup.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    grid-row: 3 / 4;
-    grid-column: 5 / 8;
+#homebanner{
+    display: flex;
+    grid-column: 2 / -2;
+    grid-row: 2 / 3;
+    align-items: center;
+    justify-content: center;
+    height: 40rem;
 }
 #hometext{
     color: #000;
-    display: block;
-    grid-row: 3 / 4;
-    grid-column: 2 / 5;
-    padding-top: 10rem;
-    padding-left: 5rem;
-    text-align: left;
+    max-width: 30rem;
+    padding: 0 5rem;
 }
+#homebanner img{
+    width: 25rem;
+    padding-right: 5rem;
+}
+
+
 .signup{
-    margin-top: 2rem;
-    margin-bottom: 2rem;
     background-color: #6CBF49;
     padding: 10px 20px;
     font-size: 1rem;
     border: none;
     color: #fff;
     border-radius: 5px;
-    cursor: pointer;
     text-decoration: none;
 }
 
@@ -74,156 +118,174 @@ header{
     color: #000;
     text-decoration: none;
 }
+
 .buttonClass{
     background-color: #6CBF49;
-    margin-top: 15px;
     padding: 15px 20px;
     font-size: 1.5rem;
     border: none;
     color: #fff;
     border-radius: 5px;
-    cursor: pointer;
     text-decoration: none;
 }
-
-header img{
-    width:100px;
-    height: auto;
-    margin-left: 5rem;
+.homecontainer{
+    grid-column: 2 / -2;
+    display: flex;
+    height: 150px;
+    align-items: center;
+    justify-content: center;
 }
-h1{
-    color: #6CBF49;
-    font-weight: 600;
-    font-family:'Open Sans';
-    font-size: 2.5rem;
-}
-
-h2{
-    color: #000;
-    font-weight: 300;
-    text-align: left;
-}
-
-h3{
-    color: #6CBF49;
-    font-weight: 300;
-}
-
-h4{
-    color: #6CBF49;
-}
-
 dt{
     color: #000;
     font-weight: bold;
 }
+.light{
+    font-weight: 400;
+}
+.bold{
+    font-weight: 800;
+    font-size: 110%;
+}
+#examplescontainer{
+    background-color: #fff;
+    display: flex;
+    grid-column: 1 / -1;
+    text-align: center;
+    align-items: flex-start;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: auto;
+    padding: 3rem;
+}
 
-
+.example{
+    width: 20rem;
+    padding: 2rem;
+}
+.example img{
+    width: 150px;
+}
+.example h3{
+    margin: 1rem 0;
+}
+#features{
+    grid-column: 2 / -2;
+    background: #d4d4d4;
+    padding-top: 2rem;
+}
+#record{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+#recordtext{
+    width: 300px;
+}
+#spending{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+#spendingtext{
+    width: 300px;
+}
+.shrinkimg{
+    width: 100%;
+}
+.imgbox{
+    width: 300px;
+}
 footer{
-    font-size: .70rem;
     font-style: italic;
     text-align: center;
     padding: 1rem;
-    grid-row: 5 / 6;
     grid-column: 2 / -2;
+    grid-row: 10;
+    height: 150px;
+    background-color: #d4d4d4;
 }
-
-main{
-    padding-left: 2rem;
-    padding-right: 2rem;
-    grid-row: 4 / 5;
+footer{
     grid-column: 2 / -2;
-    background-color: #ffffff;
+    grid-row: 11 / 12;
+    background-color: #d4d4d4;
+    text-align: center;
+    height: 85px;
+    margin-top: 1rem;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-form{
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: 200px 1fr;
-    gap: 0.75rem;
-    width: 100%;
+#footerbar{
+    background-color: #d4d4d4;
+    grid-column: 1 / -1;
+    grid-row: 11 / 12;
 }
-
-input, textarea{
-    font-size: 1rem;
-    padding: 10px;
+footer p{
     color: #666666;
-    background-color: #fafafa;
-    border: none;
-}
-
-input, text area :focus{
-    outline: none;
-    background-color: #f0f0f0;
-}
-
-label{
-    padding: 10px;
-    text-align: right;
-}
-
-#mySubmit{
-    width: 10rem;
-    font-size: 1rem;
-    grid-column: 2 / 3;
-    background-color: #6CBF49;
-    color: #fff;
-    border-radius: 5px;
-    cursor: pointer;
-    
+    padding: 0 2rem;
 }
 
 
-@media only screen and (max-width: 1100px){
-    
-#wrapper{
-    grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 150px)) minmax(0px, 1fr);
-}
+@media only screen and (max-width: 768px){
 
-}
-
-@media only screen and (max-width: 900px){
-
-    nav{
-        grid-row: 2 / 3;
-        grid-column: 1 / 5;
-        position: static;
+    *{
+        text-align: center;
+        align-items: center;
     }
-    nav ul{
-        flex-flow: column nowrap;
+    #links a{
+        display: none;
     }
-    #homehero{
+
+    #homebanner{
+        grid-column: 1 / -1;
+        flex-flow: column;
         height: auto;
-        background-image: url("images/PhoneMockup.png");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        grid-row: 2 / 3;
-        grid-column: 5 / 8;
+        justify-content: center;
+        align-items: center;
     }
-    
+    #hometext{
+        padding-top: 2rem;
+    }
+    #homebanner img{
+        padding: 2rem;
+    }
+    #bannerbar{
+        height: 65rem
+    }
 
-    section{
-        float: none;
+    header{
+        justify-content: center;
+        flex-flow: column;
+        height: 10rem;
+        justify-content: flex-end;
+    }
+    form{
+        display: grid;
+        grid-template-rows: auto;
+        grid-template-columns: 200px 1fr;
+        gap: 0.75rem;
         width: 100%;
-        padding-right: 0px;
     }
-}
-
-@media only screen and (max-width: 600px){
-header h1{
-    background-image: none;
-    text-align: center;
-}
-
-nav{
-    grid-row: 2 / 3;
-    grid-column: 1 / 9;
-}
-body{
-    text-align: center;
-}
-#homehero{
-    display: none;
-}
+ 
+    #signbuttons{
+        margin: 1.5rem 0;
+    }
+    .example{
+        padding: 0;
+    }
+    #features{
+        grid-column: 2 / -2;
+    }
+    #record{
+        flex-flow: column;
+        margin: 5rem 0;
+    }
+    .homecontainer{
+        height: 100px;
+    }
+    #spending{
+        flex-flow: column-reverse;
+        margin: 5rem 0;
+    }
 }
