added an option for a simple trial mode that lets a user play around without creating an account

--- a/website/templates/landing.html
+++ b/website/templates/landing.html
@@ -22,6 +22,7 @@
       ><img src="{{ url_for('static', filename='images/logo3small.png') }}"
     /></a>
     <div style="margin-right: 5rem; position: sticky">
+      <a class="signup" href="/test">Test it out</a> &nbsp;
       <a class="signup" href="/sign-up">Sign Up</a> &nbsp;
       <a href="/login" id="signin">Log In</a>
     </div>
