--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Sign Up</title>
-  <meta charset="utf-8">
-  <meta name="viewport" 
-        content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="noindex, nofollow">
-  <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Karla:ital@0;1&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
-<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.png') }}">
-</head>
+{% extends "base2.html" %} {% block title %}Sign Up{% endblock %} {% block content %}
 <header>
   <a href="/"><img src="{{ url_for('static', filename='images/logo3small.png') }}"></a>
      <div style="margin-right: 5rem; position: sticky;">
@@ -45,4 +32,4 @@
   <a href="mailto:carsondidericksen@gmail.com">support@marmo.app</a>
 </footer>
 </body>
-</html>
+{% endblock %}
